tests/machine/x/ocaml/group_items_iteration.error
File "/workspace/mochi/tests/machine/x/ocaml/group_items_iteration.ml", line 24, characters 51-54:
24 |     type record1 = { mutable tag : string; mutable val : int }
                                                        ^^^
Error: Syntax error
